# R4-Tauri

./: .env.example  .gitignore  .replit  DEVELOPMENT.md  README.md  electron-builder.json  electron.md  package-lock.json  package.json  plan.md  replit.md  replit.nix  tauri.md  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: QUICK_START.md  RELEASE_GUIDE.md
.github/workflows/: build-release.yml  build-windows.yml  ci.yml  release.yml  test.yml
client/: App.tsx  main.tsx  vite-env.d.ts
client/components/: ElectronTitleBar.tsx  ElectronUpdateNotification.tsx
client/components/features/exam-management/: ComparisonAnalysisTab.tsx  DashboardOverviewTab.tsx  DeleteExamDialog.tsx  EnhancedBulkResultsEntry.tsx  EnhancedExcelImport.tsx  ExamResultDialog.tsx  ExamResultsEntry.tsx  ExamSessionDialog.tsx  ExamSessionsList.tsx  ExamStatistics.tsx  QuickExamCreate.tsx  (+10 more)
client/hooks/: useElectron.ts
client/lib/utils/: electron.ts  notifications.ts  platform.ts
client/src/services/: auto-updater.ts  desktop-integration.ts  native-notifications.ts  tauri-api.ts  window-manager.ts  window-state-manager.ts
docs/: API_REFERENCE.md  AUTO_UPDATER_SETUP.md  BUILD_GUIDE.md  DATABASE_SCHEMA.md  DEPLOYMENT_CHECKLIST.md  ELECTRON-BUILD.md  ELECTRON_TESTING_GUIDE.md  FAQ.md  GUNCELLEME_STRATEJISI.md  KULLANIM_KILAVUZU.md  KURULUM_REHBERI.md  RELEASE_NOTES.md  TAURI_ARCHITECTURE.md  TAURI_NATIVE_FEATURES.md  USER_GUIDE.md
electron/: logger.ts  main.ts  menu.ts  preload.ts  store.ts  tray.ts  updater.ts
electron/ipc/: database.ts  file.ts  notifications.ts  window.ts
electron/types/: electron.d.ts
scripts/: validate-build.cjs
shared/types/: api-contracts.ts
src-tauri/: .gitignore  Cargo.toml  DEVELOPMENT.md  SECURITY_NOTES.md
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/icons/: icon.icns  icon.png.info
src-tauri/app/src/: main.rs
src-tauri/app/src/commands/: academic.rs  ai.rs  auth.rs  counseling.rs  export.rs  file.rs  migration.rs  mod.rs  notification.rs  settings.rs  student.rs  survey.rs
src-tauri/core/: Cargo.toml
src-tauri/core/migrations/: 001_create_users.sql  002_create_students.sql  003_create_academic.sql  004_create_ai_suggestions.sql  005_create_surveys.sql  006_create_counseling.sql  007_create_notifications.sql  008_create_settings.sql
src-tauri/core/src/: error.rs  lib.rs  security.rs
src-tauri/core/src/database/: connection.rs
src-tauri/core/src/models/: academic.rs  ai_suggestion.rs  counseling.rs  mod.rs  notification.rs  settings.rs  student.rs  survey.rs  user.rs
src-tauri/core/src/repositories/: academic_repository.rs  ai_suggestion_repository.rs  counseling_repository.rs  mod.rs  notification_repository.rs  student_repository.rs  survey_repository.rs  user_repository.rs
src-tauri/core/src/services/: ai_service.rs  config_service.rs  mod.rs
src-tauri/core/tests/: integration_tests.rs  mod.rs  security_tests.rs
src-tauri/src/: main.rs
(+4 files in other folders)
