[workspace]
members = ["core", "app"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.16"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
strip = true
