[package]
name = "rehber360"
version = "2.0.0"
description = "Rehber360 - Modern Öğrenci Rehberlik Sistemi"
authors = ["Rehber360 Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
rehber360-core = { path = "../core" }
tauri = { version = "2.1", features = [ "tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
