[package]
name = "rehber360-core"
version = "2.0.0"
edition = "2021"
description = "Rehber360 Core - Database and Business Logic"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
bcrypt = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"

[dev-dependencies]
env_logger = { workspace = true }
